# applied_finance

./: .gitignore  LICENSE  README.md  __next._tree.txt  pyproject.toml
404/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
app/: README.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.mts
articles/: .gitignore  compile-stamp.tex  wp01.tex
black-litterman/: __next._head.txt  __next._tree.txt
correlacoes/: __next._tree.txt
data/: cdi.json  correlation_heatmap.json  cov_matrix_1y.parquet  cov_matrix_5y.parquet  cov_matrix_full.parquet  finops_summary.json  ibov_overview.json  index_membership.csv  ipca_annual.csv  kpis_per_ticker.json  mclean_firm_universe.csv  mclean_results.json  sector_aggregates.json  ticker_universe.csv  valid_tickers_10y.json  valid_tickers_15y.json  valid_tickers_1y.json  valid_tickers_20y.json  valid_tickers_5y.json  valid_tickers_full.json
docs/: ARCHITECTURE.md  FINOPS.md  METHODOLOGY.md
finops/: __next._head.txt  __next._tree.txt  __next.finops.__PAGE__.txt  index.html  index.txt
ingenuo/: __next._head.txt  __next._tree.txt
kahneman/: __next._head.txt  __next._tree.txt
markowitz/: __next._tree.txt
mclean/: __next._head.txt  __next._tree.txt  __next.mclean.__PAGE__.txt  index.html  index.txt
metodologia/: __next._full.txt  __next._tree.txt  __next.metodologia.__PAGE__.txt  index.html
paridade/: __next._head.txt  __next._tree.txt
pipelines/: .gitignore  README.md  databricks.yml
setores/: __next._tree.txt
triagem/: __next._full.txt  (+3 more)
yfr_py/: README.md  pyproject.toml
yfr_py/src/yfr_py/: __init__.py  _cache.py  _chunker.py  _http.py  yf_get.py  yf_get_dividends.py  yf_get_index_components.py  yf_live_price.py  yf_utils.py
yfr_py/tests/: test_cache.py  test_http_backends.py  test_utils.py  test_yf_get_unit.py
(+2095 files in other folders)
