[project]
name = "applied-finance"
version = "0.1.0"
description = "Mercado BR — Brazilian stock market analytics platform (lakehouse + static dashboard)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Leonardo Chalhoub", email = "leonardochalhoub@gmail.com" }]

[tool.uv.workspace]
members = ["yfr_py"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["pipelines/notebooks/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"yfr_py/**" = ["N802", "N803"]
"yfr_py/tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["yfr_py/tests"]
addopts = "-ra --strict-markers"
